--- a/product-service/config/local.yaml
+++ b/product-service/config/local.yaml
@@ -1,3 +1,8 @@
 env: dev
 http_server:
   address: ":3000"
+mongodb:
+  uri: "mongodb+srv://mango_admin:<db_password>@cluster0.8f8ra92.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+  mongo_user: mango_admin
+  mongo_pass: Mango@007
+
